--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,16 +1,16 @@
 # Usar a imagem node:16.14-alpine como base
-FROM node:16.14
+FROM node:16.14-alpine
 # Mudar para o diretório de trabalho /app-backend
 WORKDIR /app-backend
 # Copiar os package.json e package-lock.json para o container
-COPY package.json .
-COPY package-lock.json .
+COPY package* .
 # Instalar as dependências Node
-ADD ../node_modules .
+RUN npm install
 # Copiar o restante dos arquivos da aplicação para o container
 COPY . .
 # Sinalize que aplicação expõe a porta 3001
 EXPOSE 3001
 # Configurar os comandos para iniciar a aplicação de acordo com as boas práticas
-ENTRYPOINT [ "npm", "install", "npm", "start" ]
+ENTRYPOINT [ "npm", "run" ]
+CMD [ "start" ]
 # Dica: Leia a seção Docker e Docker-compose no README para mais informações
